--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -1,5 +1,5 @@
 <div class="row results-content">
-  <div class="col">
+  <div class="col charts-results">
     {% for podcast in results.podcasts %}
       <div class="row">
         <div class="col-auto">
