--- a/podcasts/templates/grid.html
+++ b/podcasts/templates/grid.html
@@ -2,10 +2,10 @@
   {% for podcast in results.podcasts %}
   <a class="col-lg-2 col-md-3 col-4 result-box show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
     <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}200x200bb.jpg&w=200&h=200&t=absolute" />
-    <h6 class="result-title">
+    <h6 class="search-result-title">
       {{ podcast.title }}
     </h6>
-    <p class="result-artist">
+    <p class="search-result-artist">
       by {{ podcast.artist }}
     </p>
   </a>
