--- a/podcasts/templates/list.html
+++ b/podcasts/templates/list.html
@@ -1,5 +1,5 @@
 <div class="row results-content">
-  <div class="col-lg-3 col-md-6 col-sm-12">
+  <div class="col-lg-3 col-md-6 col-sm-12 browse-results">
     <ul class="browse-results-list">
       {% for podcast in results.podcasts1 %}
         <li>
@@ -10,7 +10,7 @@
       {% endfor %}
     </ul>
   </div>
-  <div class="col-lg-3 col-md-6 col-sm-12">
+  <div class="col-lg-3 col-md-6 col-sm-12 browse-results">
     <ul class="browse-results-list">
       {% for podcast in results.podcasts2 %}
         <li>
@@ -21,7 +21,7 @@
       {% endfor %}
     </ul>
   </div>
-  <div class="col-lg-3 col-md-6 col-sm-12">
+  <div class="col-lg-3 col-md-6 col-sm-12 browse-results">
     <ul class="browse-results-list">
       {% for podcast in results.podcasts3 %}
         <li>
@@ -32,7 +32,7 @@
       {% endfor %}
     </ul>
   </div>
-  <div class="col-lg-3 col-md-6 col-sm-12">
+  <div class="col-lg-3 col-md-6 col-sm-12 browse-results">
     <ul class="browse-results-list">
       {% for podcast in results.podcasts4 %}
         <li>
