--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -9,12 +9,12 @@
           </a>
         </div>
         <div class="col">
-          <h5 class="result-title">
+          <h5 class="subscription-result-title">
             <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="/podinfo/{{ podcast.itunesid }}/" title="{{ podcast.title }}">
               {{ podcast.title }}
             </a>
           </h5>
-          <h6 class="result-artist">
+          <h6 class="subscription-result-artist">
             <span>by </span>
             <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="/podinfo/{{ podcast.itunesid }}/" title="{{ podcast.artist }}">
               {{ podcast.artist }}
