--- a/index/templates/multibar.html
+++ b/index/templates/multibar.html
@@ -2,17 +2,18 @@
   <div class="row">
     <!-- SEARCH BAR -->
     <div class="col pr-0">
+
+    </div>
+    <div class="col-auto" id="multibar-search">
       {% if podcasts1 %}
-        <a class="btn btn-dope active toggle" id="browse-toggle" href="{% url 'browse' %}" data-toggle="collapse" data-target="#browse-collapse" aria-expanded="true" aria-controls="browse-collapse">
+        <a class="btn btn-dope active toggle browse-toggle" href="{% url 'browse' %}" data-toggle="collapse" data-target="#browse-collapse" aria-expanded="true" aria-controls="browse-collapse">
           A-Z
         </a>
       {% else %}
-        <a class="btn btn-dope active toggle" id="browse-toggle" href="{% url 'browse' %}" data-toggle="collapse" data-target="#browse-collapse" aria-expanded="false" aria-controls="browse-collapse">
+        <a class="btn btn-dope active toggle browse-toggle" href="{% url 'browse' %}" data-toggle="collapse" data-target="#browse-collapse" aria-expanded="false" aria-controls="browse-collapse">
           A-Z
         </a>
       {% endif %}
-    </div>
-    <div class="col-auto pl-0">
       <form class="form-inline" id="search-form" method="GET" action="{% url 'search' %}">
         <div class="input-group" id="search-field">
           <label for="q" class="sr-only">Search</label>
