--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -32,28 +32,15 @@
 </div>
 <div class="col col-md-4" id="navbar-c">
   <a class="index-link" href="/">
-    <div class="logo-wrapper">
-      <span class="x a">
-        d
-      </span>
-      <span class="x b">
-        o
-      </span>
-      <span class="x c">
-        p
-      </span>
-      <span class="x d">
-        e
-      </span>
-      <span class="x e">
-        p
-      </span>
-      <span class="x f">
-        o
-      </span>
-      <span class="x g">
-        d
-      </span>
+    <div id="logo-wrapper">
+      <span class="logo logo-1">d</span>
+      <span class="logo logo-2">o</span>
+      <span class="logo logo-3">p</span>
+      <span class="logo logo-4">e</span>
+      <span class="logo logo-5">p</span>
+      <span class="logo logo-6">o</span>
+      <span class="logo logo-7">d</span>
+      <span id="nothing"></span>
     </div>
   </a>
 </div>
