--- a/index/static/style.css
+++ b/index/static/style.css
@@ -131,7 +131,7 @@ body {
   outline: rgba(0,0,0,0);
 }
 
-@keyframes moveLeft {
+@keyframes spinLeft {
   0% {
     color: rgba(255, 255, 255, 0);
     -moz-transform: scaleX(-1);
@@ -142,13 +142,14 @@ body {
   }
   100% {
     color: rgba(255, 255, 255, 1);
-    transform: translateX(-20px);
-    -webkit-transform: translateX(-20px); /** Chrome & Safari **/
-    -o-transform: translateX(-20px); /** Opera **/
-    -moz-transform: translateX(-20px); /** Firefox **/
+    transform: scaleX(1);
+    -o-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+    -moz-transform: scaleX(1);
+    -webkit-transform: scaleX(1);
   }
 }
-@-webkit-keyframes moveLeft {
+@-webkit-keyframes spinLeft {
   0% {
     color: rgba(255, 255, 255, 0);
     -moz-transform: scaleX(-1);
@@ -159,124 +160,106 @@ body {
   }
   100% {
     color: rgba(255, 255, 255, 1);
-    transform: translateX(-20px);
-    -webkit-transform: translateX(-20px); /** Chrome & Safari **/
-    -o-transform: translateX(-20px); /** Opera **/
-    -moz-transform: translateX(-20px); /** Firefox **/
-  }
-}
-@keyframes moveRight {
-  0% {
-    -moz-transform: scaleX(1);
-    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
     -o-transform: scaleX(1);
     -ms-transform: scaleX(1);
-    transform: scaleX(1);
+    -moz-transform: scaleX(1);
+    -webkit-transform: scaleX(1);
+  }
+}
+@keyframes spinRight {
+  0% {
     color: rgba(255, 255, 255, 0);
+    transform: scaleX(1);
+    -o-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+    -moz-transform: scaleX(1);
+    -webkit-transform: scaleX(1);
   }
   100% {
     color: rgba(255, 255, 255, 1);
-    transform: scaleX(-1) translateX(-20px);
-    -webkit-transform: scaleX(-1) translateX(-20px); /** Chrome & Safari **/
-    -o-transform: scaleX(-1) translateX(-20px); /** Opera **/
-    -moz-transform: scaleX(-1) translateX(-20px); /** Firefox **/
+    transform: scaleX(-1);
+    -o-transform: scaleX(-1); /** Opera **/
+    -ms-transform: scaleX(-1);
+    -moz-transform: scaleX(-1); /** Firefox **/
+    -webkit-transform: scaleX(-1); /** Chrome & Safari **/
   }
 }
-@-webkit-keyframes moveRight {
+@-webkit-keyframes spinRight {
   0% {
-    -moz-transform: scaleX(1);
-    -webkit-transform: scaleX(1);
+    color: rgba(255, 255, 255, 0);
+    transform: scaleX(1);
     -o-transform: scaleX(1);
     -ms-transform: scaleX(1);
-    transform: scaleX(1);
-    color: rgba(255, 255, 255, 0);
+    -moz-transform: scaleX(1);
+    -webkit-transform: scaleX(1);
   }
   100% {
-    transform: scaleX(-1) translateX(-20px);
-    -webkit-transform: scaleX(-1) translateX(-20px); /** Chrome & Safari **/
-    -o-transform: scaleX(-1) translateX(-20px); /** Opera **/
-    -moz-transform: scaleX(-1) translateX(-20px); /** Firefox **/
     color: rgba(255, 255, 255, 1);
+    transform: scaleX(-1);
+    -o-transform: scaleX(-1); /** Opera **/
+    -ms-transform: scaleX(-1);
+    -moz-transform: scaleX(-1); /** Firefox **/
+    -webkit-transform: scaleX(-1); /** Chrome & Safari **/
   }
 }
-@keyframes spin {
+@keyframes nothing {
   0% {
-    -moz-transform: translateX(20px) scaleX(-1);
-    -webkit-transform: translateX(20px) scaleX(-1);
-    -o-transform: translateX(20px) scaleX(-1);
-    -ms-transform: translateX(20px) scaleX(-1);
-    transform: translateX(20px) scaleX(-1);
   }
   100% {
-    -moz-transform: translateX(20px) scaleX(1);
-    -webkit-transform: translateX(20px) scaleX(1);
-    -o-transform: translateX(20px) scaleX(1);
-    -ms-transform: translateX(20px) scaleX(1);
-    transform: translateX(20px) scaleX(1);
   }
 }
-@-webkit-keyframes spin {
-  0% {
-    -moz-transform: translateX(20px);
-    -webkit-transform: translateX(20px);
-    -o-transform: translateX(20px);
-    -ms-transform: translateX(20px);
-    transform: translateX(20px);
+@-webkit-keyframes nothing {
+    0% {
   }
   100% {
-    -moz-transform: translateX(20px) scaleX(1);
-    -webkit-transform: translateX(20px) scaleX(1);
-    -o-transform: translateX(20px) scaleX(1);
-    -ms-transform: translateX(20px) scaleX(1);
-    transform: translateX(20px) scaleX(1);
   }
 }
-
-.x {
+.logo {
   position: absolute;
   color: rgba(255, 255, 255, 0);
   top: 0;
-
 }
-.x:hover {
-
+.logo-1 {
+  left: -60px;
+  animation: spinLeft .25s ease-in .6s forwards;
+  -webkit-animation: spinLeft .25s ease-in .6s forwards;
 }
-.a {
+.logo-2 {
   left: -40px;
-  animation: moveLeft .25s ease-in .45s forwards;
-  -webkit-animation: moveLeft .25s ease-in .45s forwards;
+  animation: spinLeft .25s ease-in .4s forwards;
+  -webkit-animation: spinLeft .25s ease-in .4s forwards;
 }
-.b {
+.logo-3 {
   left: -20px;
-  animation: moveLeft .25s ease-in .3s forwards;
-  -webkit-animation: moveLeft .25s ease-in .3s forwards;
+  animation: spinLeft .25s ease-in .2s forwards;
+  -webkit-animation: spinLeft .25s ease-in .2s forwards;
 }
-.c {
+.logo-4 {
   left: 0;
-  animation: moveLeft .25s ease-in .15s forwards;
-  -webkit-animation: moveLeft .25s ease-in .15s forwards;
+  animation: spinRight .25s ease-in forwards, spinLeft .25s ease-in 1.8s forwards;
+  -webkit-animation: spinRight .25s ease-in forwards, spinLeft .25s ease-in 1.8s forwards;
 }
-.d {
-  left:-20px;
-  animation: moveRight .25s ease-in forwards, spin .2s ease-in 1.3s forwards;
-  -webkit-animation: moveRight .25s ease-in forwards, spin .2s ease-in 1.3s forwards;
-}
-.e {
-  right: 0;
-  animation: moveRight .25s ease-in .15s forwards, spin .15s ease-in 1.2s forwards;
-  -webkit-animation: moveRight .25s ease-in .15s forwards, spin .15s ease-in 1.2s forwards;
-}
-.f {
+.logo-5 {
   right: -20px;
-  animation: moveRight .25s ease-in .3s forwards, spin .15s ease-in 1.1s forwards;
-  -webkit-animation: moveRight .25s ease-in .3s forwards, spin .15s ease-in 1.1s forwards;
+  animation: spinRight .25s ease-in .2s forwards, spinLeft .25s ease-in 1.7s forwards;
+  -webkit-animation: spinRight .25s ease-in .2s forwards, spinLeft .25s ease-in 1.7s forwards;
 }
-.g {
+.logo-6 {
   right: -40px;
-  animation: moveRight .25s ease-in .45s forwards, spin .15s ease-in 1s forwards;
-  -webkit-animation: moveRight .25s ease-in .45s forwards, spin .15s ease-in 1s forwards;
+  animation: spinRight .25s ease-in .4s forwards, spinLeft .25s ease-in 1.6s forwards;
+  -webkit-animation: spinRight .25s ease-in .4s forwards, spinLeft .25s ease-in 1.6s forwards;
 }
-.logo-wrapper {
+.logo-7 {
+  right: -60px;
+  animation: spinRight .25s ease-in .6s forwards, spinLeft .25s ease-in 1.5s forwards;
+  -webkit-animation: spinRight .25s ease-in s forwards, spinLeft .25s ease-in 1.5s forwards;
+}
+#nothing {
+  animation: nothing .5s 3s;
+  -webkit-animation: nothing .5s 3s;
+}
+#logo-wrapper {
   font-size: 28px;
   font-weight: 600;
   position: relative;
@@ -286,13 +269,201 @@ body {
   margin: auto;
   height: 44px;
 }
+#dopepod {
+}
 
 /* LOADING ANIMATIONS */
 .results-loading {
-  font-size: 24px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  position: relative;
+  font-size: 28px;
+  font-weight: 600;
+  position: relative;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  width: 15px;
   margin: auto;
+  height: 44px;
+}
+@keyframes Fade {
+  0% {
+    color: rgba(0, 0, 0, 1);
+  }
+  50% {
+    color: rgba(0, 0, 0, 0);
+  }
+}
+@-webkit-keyframes Fade {
+  0% {
+    color: rgba(0, 0, 0, 1);
+  }
+  50% {
+    color: rgba(0, 0, 0, 0);
+    transform: translateY(-40px);
+    -webkit-transform: translateY(-40px); /** Chrome & Safari **/
+    -o-transform: translateY(-40px); /** Opera **/
+    -moz-transform: translateY(-40px); /** Firefox **/
+  }
+  100% {
+    display: none;
+  }
+}
+@keyframes upFade {
+  0% {
+    color: rgba(0, 0, 0, 1);
+  }
+  50% {
+    color: rgba(0, 0, 0, 0);
+    transform: translateY(-40px);
+    -webkit-transform: translateY(-40px); /** Chrome & Safari **/
+    -o-transform: translateY(-40px); /** Opera **/
+    -moz-transform: translateY(-40px); /** Firefox **/
+  }
+  100% {
+    display: none;
+  }
+}
+@-webkit-keyframes upFade {
+  0% {
+    color: rgba(0, 0, 0, 1);
+  }
+  50% {
+    color: rgba(0, 0, 0, 0);
+    transform: translateY(-40px);
+    -webkit-transform: translateY(-40px); /** Chrome & Safari **/
+    -o-transform: translateY(-40px); /** Opera **/
+    -moz-transform: translateY(-40px); /** Firefox **/
+  }
+  100% {
+    display: none;
+  }
+}
+@keyframes downFade {
+  0% {
+    color: rgba(0, 0, 0, 1);
+  }
+  50% {
+    color: rgba(0, 0, 0, 0);
+    transform: translateY(40px);
+    -webkit-transform: translateY(40px); /** Chrome & Safari **/
+    -o-transform: translateY(40px); /** Opera **/
+    -moz-transform: translateY(40px); /** Firefox **/
+  }
+  100% {
+    display: none;
+  }
+}
+@-webkit-keyframes downFade {
+  0% {
+    color: rgba(0, 0, 0, 1);
+  }
+  50% {
+    color: rgba(0, 0, 0, 0);
+    transform: translateY(40px);
+    -webkit-transform: translateY(40px); /** Chrome & Safari **/
+    -o-transform: translateY(40px); /** Opera **/
+    -moz-transform: translateY(40px); /** Firefox **/
+  }
+  100% {
+    display: none;
+  }
+}
+@keyframes disappear {
+  0% {
+    color: rgba(0, 0, 0, 1);
+  }
+  100% {
+    color: rgba(0, 0, 0, 0);
+  }
+}
+@keyframes appear {
+  0% {
+    color: rgba(0, 0, 0, 0);
+  }
+  100% {
+    color: rgba(0, 0, 0, 1);
+  }
+}
+.loading-a-1 {
+  left: -62px;
+  animation: appear .25s ease-in .45s forwards, upFade .5s ease-in 1s forwards;
+  -webkit-animation: appear .25s ease-in .45s forwards, upFade .5s ease-in 1s forwards;
+}
+.loading-a-2 {
+  left: -42px;
+  animation: appear .25s ease-in .3s forwards, Fade .5s ease-in 1.1s forwards;
+  -webkit-animation: appear .25s ease-in .3s forwards, Fade .5s ease-in 1.1s forwards;
+}
+.loading-a-3 {
+  left: -22px;
+  animation: appear .25s ease-in .15s forwards, downFade .5s ease-in 1.2s forwards;
+  -webkit-animation: appear .25s ease-in .15s forwards, downFade .5s ease-in 1.2s forwards;
+}
+.loading-a-4 {
+  left: -2px;
+  animation: appear .25s ease-in forwards, Fade .5s ease-in 1.3s forwards;
+  -webkit-animation: appear .25s ease-in forwards, Fade .5s ease-in 1.3s forwards;
+}
+.loading-a-5 {
+  right: -22px;
+  animation: appear .25s ease-in .15s forwards, downFade .5s ease-in 1.4s forwards;
+  -webkit-animation: appear .25s ease-in .15s forwards, downFade .5s ease-in 1.4s forwards;
+}
+.loading-a-6 {
+  right: -42px;
+  animation: appear .25s ease-in .3s forwards, Fade .5s ease-in 1.5s forwards;
+  -webkit-animation: appear .25s ease-in .3s forwards, Fade .5s ease-in 1.5s forwards;
+}
+.loading-a-7 {
+  right: -62px;
+  animation: appear .25s ease-in .45s forwards, upFade .5s ease-in 1.6s forwards;
+  -webkit-animation: appear .25s ease-in .45s forwards, upFade .5s ease-in 1.6s forwards;
+}
+.loading-b-1 {
+  left: -60px;
+  animation: appear .25s ease-in 1s forwards;
+  -webkit-animation: appear .25s ease-in 1s forwards;
+}
+.loading-b-2 {
+  left: -40px;
+  animation: appear .25s ease-in 1.1s forwards;
+  -webkit-animation: appear .25s ease-in 1.1s forwards;
+}
+.loading-b-3 {
+  left: -20px;
+  animation: appear .25s ease-in 1.2s forwards;
+  -webkit-animation: appear .25s ease-in 1.2s forwards;
+}
+.loading-b-4 {
+  left: 0;
+  animation: appear .25s ease-in 1.3s forwards;
+  -webkit-animation: appear .25s ease-in 1.3s forwards;
+}
+.loading-b-5 {
+  right: -20px;
+  animation: appear .25s ease-in 1.4s forwards;
+  -webkit-animation: appear .25s ease-in 1.4s forwards;
+}
+.loading-b-6 {
+  right: -40px;
+  animation: appear .25s ease-in 1.5s forwards;
+  -webkit-animation: appear .25s ease-in 1.5s forwards;
+}
+.loading-b-7 {
+  right: -60px;
+  animation: appear .25s ease-in 1.6s forwards;
+  -webkit-animation: appear .25s ease-in 1.6s forwards;
+}
+.loading-a {
+  position: absolute;
+  color: rgba(255, 255, 255, 0);
+  top: 2px;
+  height: 36px;
+}
+.loading-b {
+  position: absolute;
+  color: rgba(255, 255, 255, 0);
+  top: 0;
+  height: 36px;
 }
 
 /* MAIN */
