--- a/index/static/style.css
+++ b/index/static/style.css
@@ -22,6 +22,7 @@ body {
 .btn-dope-tab, .btn-dope-tab.focus, .btn-dope-tab:focus {
   border-radius: .25rem .25rem 0 0;
   background: inherit;
+  min-width: 42px;
 }
 .btn-dope-social {
   display: inline-flex;
@@ -134,11 +135,11 @@ body {
 @keyframes spinLeft {
   0% {
     color: rgba(255, 255, 255, 0);
-    -moz-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
     -o-transform: scaleX(-1);
     -ms-transform: scaleX(-1);
-    transform: scaleX(-1);
+    -moz-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
   }
   100% {
     color: rgba(255, 255, 255, 1);
@@ -152,11 +153,11 @@ body {
 @-webkit-keyframes spinLeft {
   0% {
     color: rgba(255, 255, 255, 0);
-    -moz-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
     -o-transform: scaleX(-1);
     -ms-transform: scaleX(-1);
-    transform: scaleX(-1);
+    -moz-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
   }
   100% {
     color: rgba(255, 255, 255, 1);
@@ -274,14 +275,24 @@ body {
 
 /* LOADING ANIMATIONS */
 .results-loading {
+  margin: auto;
+  text-align: center;
+  width: 200px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: .25rem;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 5px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 5px;
+  box-shadow: rgba(0,0,0,.3) 0 1px 5px ;
+}
+.loading {
+  margin: auto;
   position: relative;
-  font-size: 28px;
+  font-size: 28px!important;
   font-weight: 600;
-  position: relative;
   padding-top: 6px;
   padding-bottom: 6px;
   width: 15px;
-  margin: auto;
   height: 44px;
 }
 @keyframes Fade {
@@ -420,50 +431,61 @@ body {
 }
 .loading-b-1 {
   left: -60px;
-  animation: appear .25s ease-in 1s forwards;
-  -webkit-animation: appear .25s ease-in 1s forwards;
+  animation: appear .25s ease-in 1s forwards, disappear .25s ease-in 3s forwards;
+  -webkit-animation: appear .25s ease-in 1s forwards, disappear .25s ease-in 3s forwards;
 }
 .loading-b-2 {
   left: -40px;
-  animation: appear .25s ease-in 1.1s forwards;
-  -webkit-animation: appear .25s ease-in 1.1s forwards;
+  animation: appear .25s ease-in 1.1s forwards, disappear .25s ease-in 3.1s forwards;
+  -webkit-animation: appear .25s ease-in 1.1s forwards, disappear .25s ease-in 3.1s forwards;
 }
 .loading-b-3 {
   left: -20px;
-  animation: appear .25s ease-in 1.2s forwards;
-  -webkit-animation: appear .25s ease-in 1.2s forwards;
+  animation: appear .25s ease-in 1.2s forwards, disappear .25s ease-in 3.2s forwards;
+  -webkit-animation: appear .25s ease-in 1.2s forwards, disappear .25s ease-in 3.2s forwards;
 }
 .loading-b-4 {
   left: 0;
-  animation: appear .25s ease-in 1.3s forwards;
-  -webkit-animation: appear .25s ease-in 1.3s forwards;
+  animation: appear .25s ease-in 1.3s forwards, disappear .25s ease-in 3.3s forwards;
+  -webkit-animation: appear .25s ease-in 1.3s forwards, disappear .25s ease-in 3.3s forwards;
 }
 .loading-b-5 {
   right: -20px;
-  animation: appear .25s ease-in 1.4s forwards;
-  -webkit-animation: appear .25s ease-in 1.4s forwards;
+  animation: appear .25s ease-in 1.4s forwards, disappear .25s ease-in 3.2s forwards;
+  -webkit-animation: appear .25s ease-in 1.4s forwards, disappear .25s ease-in 3.2s forwards;
 }
 .loading-b-6 {
   right: -40px;
-  animation: appear .25s ease-in 1.5s forwards;
-  -webkit-animation: appear .25s ease-in 1.5s forwards;
+  animation: appear .25s ease-in 1.5s forwards, disappear .25s ease-in 3.1s forwards;
+  -webkit-animation: appear .25s ease-in 1.5s forwards, disappear .25s ease-in 3.1s forwards;
 }
 .loading-b-7 {
   right: -60px;
-  animation: appear .25s ease-in 1.6s forwards;
-  -webkit-animation: appear .25s ease-in 1.6s forwards;
+  animation: appear .25s ease-in 1.6s forwards, disappear .25s ease-in 3s forwards;
+  -webkit-animation: appear .25s ease-in 1.6s forwards, disappear .25s ease-in 3s forwards;
 }
 .loading-a {
   position: absolute;
   color: rgba(255, 255, 255, 0);
-  top: 2px;
+  top: -2px;
   height: 36px;
+  font-size: 32px!important;
 }
 .loading-b {
   position: absolute;
   color: rgba(255, 255, 255, 0);
   top: 0;
   height: 36px;
+}
+.loading-c {
+  display: inline-flex;
+  position: absolute;
+  color: rgba(255, 255, 255, 0);
+  top: 0;
+  left: -60px;
+  height: 36px;
+  animation: appear .5s ease-in 4s forwards;
+  -webkit-animation: appear .5s ease-in 4s forwards;
 }
 
 /* MAIN */
@@ -840,6 +862,9 @@ body {
   font-size: 20px;
   min-width: 250px;
   margin-bottom: 15px;
+}
+.results-collapse.show {
+    display: flex;
 }
 .results-options {
   margin-left: auto;
