--- a/index/templates/dashboard.html
+++ b/index/templates/dashboard.html
@@ -18,7 +18,8 @@ dashboard - dopepod
         </a>
       </p>
       <p>
-        You have no playlist
+        You have no playlist<br />
+        (Coming soon!)
       </p>
     </div>
   </div>
