bye bye navbar :'(

--- a/index/static/style.css
+++ b/index/static/style.css
@@ -67,14 +67,17 @@ body {
 }
 
 /* COLORS */
-.color-1-trans {
-  background: rgba(0, 204, 122, .9);
-}
 .color-1 {
   background: rgba(0, 204, 122, 1);
 }
+.color-1-trans {
+  background: rgba(0, 204, 122, .9);
+}
 .color-2 {
   background: rgba(45,43,43,1);
+}
+.color-2-trans {
+  background: rgba(45,43,43,.9);
 }
 
 /* NAVBAR */
@@ -584,15 +587,18 @@ body {
   padding-top: 8px;
   padding-bottom: 8px;
 }
-#multibar-scroll {
+#multibar-drop {
   border-bottom: 1px solid rgba(45,43,43,.8);
   -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   box-shadow: rgba(0,0,0,.3) 0 1px 3px;
-  margin-top: 44px;
   z-index: 95;
 }
+#multibar-nav {
+  display: inline-flex;
+}
 #multibar-search {
+  max-width: 400px;
   display: inline-flex;
 }
 #browse-bar {
@@ -611,7 +617,7 @@ body {
   z-index: 75;
 }
 #flap.extended{
-  top: -400px;
+  top: -450px;
 }
 #center-stage {
   background-color: #E6ECF0;
@@ -619,9 +625,7 @@ body {
   overflow: hidden;
 }
 #center-stage.open {
-  height: 444px;
-  padding-top: 44px;
-  margin-bottom: -44px;
+  height: 450px;
 }
 
 /* SEARCH */
@@ -652,7 +656,7 @@ body {
 
 }
 #q {
-  width: 270px;
+  width: 100%;
   border-radius: .25rem;
   padding: 6px 25px 6px 8px;
   border: 1px solid rgba(45,43,43,.5);
@@ -672,7 +676,7 @@ body {
 
 /* LOGIN-SIGNUP */
 #login {
-  height: 400px;
+  height: 450px;
   background: #fff;
   text-align: center;
   padding-top: 15px;
@@ -718,7 +722,7 @@ body {
 
 /* DASHBOARD */
 #dashboard {
-  height: 400px;
+  height: 451px;
 }
 #dashboard-top {
   text-align: center;
@@ -735,7 +739,7 @@ body {
 #settings {
   background: #fff;
   position: relative;
-  height: 400px;
+  height: 450px;
   padding: 15px;
 }
 #settings-form {
@@ -752,7 +756,7 @@ body {
 /* PODINFO */
 #podinfo {
   background-color: #fff;
-  height: 400px;
+  height: 450px;
 }
 #podinfo-top {
   height: 345px;
