--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -8,6 +8,16 @@ dopepod
 <div class="container">
   <div class="row">
     <div class="col" id="login">
+      <div id="logo-wrapper">
+        <span class="logo logo-1">d</span>
+        <span class="logo logo-2">o</span>
+        <span class="logo logo-3">p</span>
+        <span class="logo logo-4">e</span>
+        <span class="logo logo-5">p</span>
+        <span class="logo logo-6">o</span>
+        <span class="logo logo-7">d</span>
+        <span id="nothing"></span>
+      </div>
       <h4>
         Search for and listen to thousands of free podcasts on <strong>dopepod</strong>
       </h4>
