--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -19,12 +19,6 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
   </head>
   <body>
-    <!--HERE BE NAVBAR-->
-    <nav class="navbar fixed-top navbar-expand-md color-2" id="navbar">
-      <div class="container" id="navbar-drop">
-        {% include 'navbar.html' %}
-      </div>
-    </nav>
     <!-- MAIN CONTENT -->
     <div id="main-wrapper">
       <div class="container-fluid sticky-top extended" id="flap">
@@ -33,7 +27,7 @@
           {% endblock %}
         </div>
         <!-- MULTIBAR -->
-        <div class="row color-1-trans" id="multibar-scroll">
+        <div class="row color-2-trans" id="multibar-drop">
           {% include 'multibar.html' %}
         </div>
       </div>
